# hcaptcha-challenger

./: .deepsource.toml  .gitattributes  .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: FUNDING.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: -i18n--challenge----langname-.md  i18n-challenge----langname-.md  i18n-challenge.md  new-challenge.md  new-challenge.yaml  question.md
.github/workflows/: annotator.yaml  collector.yaml  publish.yaml  pypi_release.yml  python-pytest.yaml  release-draft.yml  sentinel.yaml
_archive/api/: readme.md
_archive/api/routers/: __init__.py  challenge.py
_archive/assets/record_json/: image_label_area_select.bounding_box.butterfly.json  image_label_area_select.point.appears only once.default.json  image_label_area_select.point.bell.default.json
_archive/automation/: roboflow_yolov8.ipynb
_archive/benchmarks/: readme.md
_archive/demo_stash_motion_data/: motion.py  requirements.txt
_archive/docs/flowchat_datalake_post/: motion_flow.drawio
_archive/examples/: demo_classifier_common.py  demo_draw_star_bricks.py  demo_multiple_choice.py  test_examples.py
_archive/examples/demo_stash_motion_data/: __init__.py  motion.html
_archive/hcaptcha_challenger/: constant.py  utils.py
_archive/hcaptcha_challenger/agent/: __init__.py  _pipline.py
_archive/src/: objects2023.yaml  objects2024.yaml  readme.md
_archive/tests/: prompts.json  test_downloader.py  test_gemini_image_classifier.py  test_install.py  test_self_supervised.py
api/routers/: datalake.py
assets/: find_unique_object.drawio
assets/record_json/: image_label_binary.beverage.json  image_label_binary.the largest animal in real life.json  image_label_multiple_choice.json
automation/: annotator.py  collector.py  downloader.py  istock.py  requirements.txt  roboflow_resnet.ipynb  roboflow_yolov8.ipynb  sentinel.py  test_istock.py
backend/: main.py  readme.md
backend/routers/: challenge.py
benchmarks/: readme_pluggable_model.md
docker/: .env.example  Dockerfile  docker-compose.yaml  publish.sh
docs/: README.md  README_ru.md  README_vi.md  README_zh.md  l2_detection.ipynb  predict_trajectories.ipynb  zero_shot_image_segmentation.ipynb  zero_shot_object_detection.ipynb  zero_shot_spatial_understanding_3d.ipynb
examples/: .env.example  demo_auto_labeling.py  demo_camoufox.py  demo_captcha_agent.py  demo_challenge.py  demo_classifier_clip.py  demo_classifier_rank_largest_animal.py  demo_classifier_self_supervised.py  demo_classify.py  demo_collect.py  demo_collector.py  demo_collete.py  demo_common_classifier.py  demo_common_detector.py  demo_custom_agent_config.py  demo_detect.py  demo_detect_bounding_box.py  demo_detect_default.py  demo_detect_point.py  demo_download_images.py  demo_draw_animal_head.py  demo_draw_segment.py  demo_draw_segment_masks.py  demo_draw_star_bricks.py  demo_find_unique_object.py  demo_install.py  demo_intercept_request.py  demo_llm_browser_use.py  demo_normal_pipline.py  demo_normal_playwright.py  demo_onclick_playwright.py  demo_rank_largest_animal.py  demo_selenium.py  demo_sentinel.py  demo_undetected_playwright.py  demo_undetected_selenium.py  faker_client.py  image_label_area_select.bounding_box.json  image_label_area_select.point.json  image_label_binary.None.json  (+7 more)
examples/demo_stash_motion_data/: tracker.py
examples/find_unique_object/: seg.py
examples/jobs/: image_drag_drop.json  image_label_area_select.json  image_label_area_select_shape5.json  image_label_binary.json
examples/lvm_challenge/: vision_minor.ipynb
examples/motion/: README.md  __init__.py  motion.py
hcaptcha_challenger/: __init__.py  _settings.py  challenger.py  constant.py  core.py  exceptions.py  models.py  pipline.py  solver.py  utils.py
hcaptcha_challenger/_scaffold/: __init__.py
hcaptcha_challenger/_solutions/: kernel.py  resnet.py  yolo.py
hcaptcha_challenger/agent/: __init__.py  _control.py  challenger.py
hcaptcha_challenger/agents/: __init__.py  exceptions.py  playwright.py  selenium.py  skeleton.py
hcaptcha_challenger/apis/: __init__.py
hcaptcha_challenger/components/: __init__.py  common.py  cv_toolkit.py  image_classifier.py  image_downloader.py  image_label_area_select.py  middleware.py  prompt_handler.py  yolo_mocker.py  zero_shot_image_classifier.py
hcaptcha_challenger/helper/: __init__.py  inject_mouse_visualizer.py  webm_to_mp4.py
hcaptcha_challenger/llm/: __init__.py
hcaptcha_challenger/onnx/: __init__.py  clip.py  modelhub.py  resnet.py  utils.py  yolo.py
hcaptcha_challenger/services/: __init__.py
hcaptcha_challenger/solutions/: kernel.py  resnet.py  sk_recognition.py  yolo.py
hcaptcha_challenger/tools/: __init__.py  common.py  gemini_image_classifier.py  image_downloader.py  image_label_area_select.py  image_label_binary.py  match_model.py  prompt_handler.py  zero_shot_image_classifier.py
hcaptcha_challenger/utils/: __init__.py  agents.py  toolbox.py
src/: main.py  objects.yaml  objects2024.yaml  readme.md
src/apis/examples/: __init__.py  demo.py  (+1 more)
src/hcaptcha_challenger/: __init__.py  models.py  prompts.py  utils.py
src/services/: scaffold.py  settings.py
tests/: cli_progress.py  gen_qa_data.py  goose2309.onnx  lookup_yolo.py  prompts.json  qa_data.txt  test_check_examples.py  test_classifier.py  test_collector.py  test_create_coordinate_grid.py  test_downloader.py  test_gemini_image_classifier.py  test_helper_create_comparison_image.py  test_helper_create_coordinate_grid.py  test_helper_env_generator.py  test_helper_mark_element_point.py  test_helper_overlay_grid_on_image.py  test_helper_webm_to_mp4.py  test_install.py  test_match_models.py  test_normal_playwright.py  test_overlay_grid_on_image.py  test_prompt_handler.py  test_schema_image_binary_challenge.py  test_self_supervised.py  test_sentinel.py  test_tools_challenge_classifier.py  test_tools_common.py  test_tools_image_classifier.py  test_tools_spatial_bbox_reasoning.py  test_tools_spatial_path_reasoning.py  test_tools_spatial_point_reasoning.py  test_webm_to_mp4.py  test_yolov8seg.py
(+82 files in other folders)
