# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-optional-dependencies
[project]
name = "hcaptcha-challenger"
version = "0.11.0"
description = "🥂 Gracefully face hCaptcha challenge with MoE(ONNX) embedded solution."
license = "GPL-3.0-or-later"
authors = ["QIN2DIM <yaoqinse@gmail.com>", "Bingjie Yan <bj.yan.pa@qq.com>"]
readme = "README.md"
requires-python = ">=3.10"
homepage = "https://github.com/QIN2DIM/hcaptcha-challenger"
repository = "https://github.com/QIN2DIM/hcaptcha-challenger"
documentation = "https://github.com/QIN2DIM/hcaptcha-challenger"
keywords = ["hcaptcha", "hcaptcha-challenger", "hcaptcha-solver"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "hcaptcha_challenger", format = "sdist" }]
dependencies = [
    "pytz",
    "httpx",
    "loguru",
    "pydantic-settings",
    "undetected-playwright-patch",
    "playwright~=1.40.0",
    "google-genai>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
asyncio_mode = "auto"
filterwarnings = "ignore::DeprecationWarning"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
skip-string-normalization = true
