# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-optional-dependencies
[project]
name = "hcaptcha-challenger"
version = "0.14.2"
dependencies = [
    "pytz",
    "httpx",
    "loguru",
    "pydantic-settings",
    "playwright",
    "google-genai>=1.9.0",
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.10.1",
    "numpy>2.0",
    "pillow>=11.1.0",
    "msgpack>=1.1.0",
    "tenacity>=9.1.2",
]
requires-python = ">=3.10"
authors = [
    { name = "QIN2DIM", email = "yaoqinse@gmail.com" },
    { name = "Bingjie Yan", email = "bj.yan.pa@qq.com" }
]
description = "🥂 Gracefully face hCaptcha challenge with multimodal large language model."
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["hcaptcha", "hcaptcha-challenger", "hcaptcha-solver", "agent", "large language model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/QIN2DIM/hcaptcha-challenger"
Documentation = "https://github.com/QIN2DIM/hcaptcha-challenger"
Repository = "https://github.com/QIN2DIM/hcaptcha-challenger.git"
Issues = "https://github.com/QIN2DIM/hcaptcha-challenger/issues"
Changelog = "https://github.com/QIN2DIM/hcaptcha-challenger/blob/master/CHANGELOG.md"

[project.optional-dependencies]
server = [
    "fastapi[all]>=0.115.12",
]

# https://packaging.python.org/en/latest/key_projects/#hatch
# https://hatch.pypa.io/latest/config/build/#build-system
[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/build/#explicit-selection
[tool.hatch.build.targets.sdist]
only-include = ["src/hcaptcha_challenger"]
exclude = [
    "_archive/*.py",
    'tests/',
    'docker/',
    'examples/'
]

# https://hatch.pypa.io/latest/config/build/#packages
[tool.hatch.build.targets.wheel]
packages = ["src/hcaptcha_challenger"]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
asyncio_mode = "auto"
filterwarnings = "ignore::DeprecationWarning"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
skip-string-normalization = true

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
